# footprints

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  access.py  collectors.py  config.py  doc.py  dump.py  loggers.py  observers.py  priorities.py  proxies.py  pyproject.toml  reporting.py  stdtypes.py  util.py
.github/workflows/: codeql.yml  lint_test_and_doc.yml
docs/: conf.py  footprints_auto.rst  footprints_fr.rst  index.rst
src/footprints/: __init__.py  access.py  collectors.py  config.py  doc.py  loggers.py  priorities.py  proxies.py  reporting.py  stdtypes.py  util.py
tests/: test_fp_core.py  test_fp_doc.py  test_fp_doctests.py  test_fp_priorities.py  test_fp_reporting.py  test_fp_setup.py  test_fp_stdtypes.py  test_fp_util.py
